--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smoke</td><td>testn.test2(java.lang.String)[pri:2, instance:com.testng.testn@3c0f93f1]<br/>testn.test1(java.lang.String, java.lang.String)[pri:1, instance:com.testng.testn@3c0f93f1]<br/></td></tr>
+</table>
