--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,26 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fd0e6">  <td>22/11/10 17:57:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;amazon.Beforeclass()[pri:0, instance:com.testng.amazon@148080bb]">&gt;&gt;Beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>22/11/10 17:57:12</td>   <td>4288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;amazon.Beforemethod()[pri:0, instance:com.testng.amazon@148080bb]">&gt;&gt;Beforemethod</td> 
-<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>22/11/10 17:57:12</td>   <td>4289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="amazon.test1()[pri:1, instance:com.testng.amazon@148080bb]">test1</td> 
-  <td>main@2068434592</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>22/11/10 17:57:14</td>   <td>6554</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;amazon.Afteremethod()[pri:0, instance:com.testng.amazon@148080bb]">&lt;&lt;Afteremethod</td> 
-<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>22/11/10 17:57:14</td>   <td>6555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;amazon.Beforemethod()[pri:0, instance:com.testng.amazon@148080bb]">&gt;&gt;Beforemethod</td> 
-<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>22/11/10 17:57:14</td>   <td>6555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="amazon.test2()[pri:2, instance:com.testng.amazon@148080bb]">test2</td> 
-  <td>main@2068434592</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>22/11/10 17:57:15</td>   <td>6752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;amazon.Afteremethod()[pri:0, instance:com.testng.amazon@148080bb]">&lt;&lt;Afteremethod</td> 
-<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>22/11/10 17:57:15</td>   <td>6753</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;amazon.Beforemethod()[pri:0, instance:com.testng.amazon@148080bb]">&gt;&gt;Beforemethod</td> 
-<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>22/11/10 17:57:15</td>   <td>6753</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="amazon.test3()[pri:3, instance:com.testng.amazon@148080bb]">test3</td> 
-  <td>main@2068434592</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>22/11/10 17:57:15</td>   <td>6757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;amazon.Afteremethod()[pri:0, instance:com.testng.amazon@148080bb]">&lt;&lt;Afteremethod</td> 
-<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
-<tr bgcolor="7fd0e6">  <td>22/11/10 17:57:15</td>   <td>6758</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;amazon.Afterclass()[pri:0, instance:com.testng.amazon@148080bb]">&lt;&lt;Afterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:50:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testn.Beforeclass()[pri:0, instance:com.testng.testn@3c0f93f1]">&gt;&gt;Beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:51:30</td>   <td>37666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testn.Beforemethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&gt;&gt;Beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:51:30</td>   <td>37667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testn.test1(java.lang.String, java.lang.String)[pri:1, instance:com.testng.testn@3c0f93f1]">test1</td> 
+  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:51:34</td>   <td>41135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;testn.Afteremethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&lt;&lt;Afteremethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:51:34</td>   <td>41143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testn.Beforemethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&gt;&gt;Beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:51:34</td>   <td>41143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testn.test3()[pri:3, instance:com.testng.testn@3c0f93f1]">test3</td> 
+  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:14</td>   <td>141373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;testn.Afteremethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&lt;&lt;Afteremethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:14</td>   <td>141374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testn.Beforemethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&gt;&gt;Beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:14</td>   <td>141374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testn.test4()[pri:4, instance:com.testng.testn@3c0f93f1]">test4</td> 
+  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:14</td>   <td>141382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;testn.Afteremethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&lt;&lt;Afteremethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:14</td>   <td>141383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testn.Beforemethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&gt;&gt;Beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:14</td>   <td>141383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testn.test5()[pri:5, instance:com.testng.testn@3c0f93f1]">test5</td> 
+  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:15</td>   <td>142491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;testn.Afteremethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&lt;&lt;Afteremethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:15</td>   <td>142492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testn.Beforemethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&gt;&gt;Beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:15</td>   <td>142492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testn.test6()[pri:6, instance:com.testng.testn@3c0f93f1]">test6</td> 
+  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:15</td>   <td>142498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;testn.Afteremethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&lt;&lt;Afteremethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:15</td>   <td>142498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testn.Beforemethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&gt;&gt;Beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:15</td>   <td>142498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testn.test6()[pri:6, instance:com.testng.testn@3c0f93f1]">test6</td> 
+  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:15</td>   <td>142516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;testn.Afteremethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&lt;&lt;Afteremethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:15</td>   <td>142517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testn.Beforemethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&gt;&gt;Beforemethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:15</td>   <td>142517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testn.test7()[pri:7, instance:com.testng.testn@3c0f93f1]">test7</td> 
+  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:47</td>   <td>174771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;testn.Afteremethod()[pri:0, instance:com.testng.testn@3c0f93f1]">&lt;&lt;Afteremethod</td> 
+<td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
+<tr bgcolor="7fd0e6">  <td>22/11/11 14:53:47</td>   <td>174772</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;testn.Afterclass()[pri:0, instance:com.testng.testn@3c0f93f1]">&lt;&lt;Afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1525037790</td>   <td></td> </tr>
 </table>
